// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChopLogicLabel > should render correctly as not required label 1`] = `
<DocumentFragment>
  <label
    class="sc-braxZu eZLZgi test-class-name"
    for="test-input-id"
  >
    <span
      class="sc-gJhJTp cDfTBm"
    >
      Test label
    </span>
  </label>
</DocumentFragment>
`;

exports[`ChopLogicLabel > should render correctly as required label 1`] = `
<DocumentFragment>
  <label
    class="sc-braxZu eZLZgi test-class-name"
    for="test-input-id"
  >
    <span
      class="sc-gJhJTp cDfTBm"
    >
      Test label
    </span>
    <abbr
      class="sc-elDIKY ikvWbU"
      title="required"
    >
      *
    </abbr>
  </label>
</DocumentFragment>
`;

exports[`ChopLogicLabel > should render correctly without text 1`] = `
<DocumentFragment>
  <label
    class="sc-braxZu eZLZgi test-class-name"
    for="test-input-id"
  />
</DocumentFragment>
`;

exports[`ChopLogicLabel > should render left icon 1`] = `
<DocumentFragment>
  <label
    class="sc-braxZu eZLZgi test-class-name"
    for="test-input-id"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M14 0H2C.9 0 0 .9 0 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V2c0-1.1-.9-2-2-2zM7 12.414L3.293 8.707l1.414-1.414L7 9.586l4.793-4.793 1.414 1.414L7 12.414z"
        fill="currentColor"
      />
    </svg>
    <span
      class="sc-gJhJTp cDfTBm"
    >
      Test label
    </span>
  </label>
</DocumentFragment>
`;

exports[`ChopLogicLabel > should render right icon 1`] = `
<DocumentFragment>
  <label
    class="sc-braxZu eZLZgi test-class-name"
    for="test-input-id"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M14 0H2C.9 0 0 .9 0 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V2c0-1.1-.9-2-2-2zM7 12.414L3.293 8.707l1.414-1.414L7 9.586l4.793-4.793 1.414 1.414L7 12.414z"
        fill="currentColor"
      />
    </svg>
    <span
      class="sc-gJhJTp cDfTBm"
    >
      Test label
    </span>
  </label>
</DocumentFragment>
`;
